# IMUProject

./: README.md
code/cpp/: CMakeLists.txt
code/cpp/SpeedRegression/: CMakeLists.txt
code/cpp/algorithm/: CMakeLists.txt  double_intergration.cpp  double_intergration.h  geometry.cc  geometry.h  geometry_test.cc  position_function.cpp  position_function.h  rotation_function.cpp  rotation_function.h  temporal_function.h
code/cpp/imu_localization/: CMakeLists.txt  imu_localization.cc  imu_localization.cpp  imu_localization.h  imu_localization_cli.cc  main.cpp
code/cpp/imu_optimization/: CMakeLists.txt  imu_optimization.cc  imu_optimization.cpp  imu_optimization.h  imu_optimization_cli.cc  main.cpp
code/cpp/imu_visualization/: CMakeLists.txt  imuvis_cli.cpp  main_widget.cpp  main_widget.h  renderable.cpp  renderable.h
code/cpp/speed_regression/: CMakeLists.txt  feature_target.cc  feature_target.h  main.cpp  model_wrapper.cc  model_wrapper.cpp  model_wrapper.h  speed_regression.cpp  speed_regression.h  speed_regression_cli.cc  svr_cascade.cpp  svr_cascade.h
code/cpp/utility/: CMakeLists.txt  QuaternionSpline.cpp  QuaternionSpline.h  data_io.cc  data_io.cpp  data_io.h  imu_dataset.cpp  imu_dataset.h  main.cc  main.cpp  quaternion_spline.cpp  quaternion_spline.h  utility.cc  utility.cpp  utility.h  utility_test.cpp
code/cpp/viewer/: CMakeLists.txt  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  navigation.cpp  navigation.h  renderable.cpp  renderable.h  viewer_cli.cc  visualize_trajectory.cpp
code/cpp/viewer/resource/: resource.qrc
code/cpp/viewer/resource/shaders/: canvas_shader.frag  canvas_shader.vert  line_shader.frag  line_shader.vert
code/cpp/visualization/: CMakeLists.txt  imu_visualization.cpp  imu_visualization.h  renderable.cpp  renderable.h  visualize_trajectory.cpp
code/python/: KNN.ipynb  Pytorch_learn.ipynb  RNN.ipynb  SVRCascade.ipynb  comparison.ipynb  direction.ipynb  double_integration.ipynb  genDataset.py  local_speed_regression.ipynb  magnetometer.ipynb  meeting1-20.ipynb  misc.ipynb  multi_device.ipynb  speed_regression.ipynb  svr_weight.ipynb  unit_tests.py  wifi_localization.ipynb
code/python/algorithms/: calibrate_imu.py  double_integration.py  double_intergration.py  estimate_similarity.py  geometry.py  icp.py  sensor_filter.py  unit_tests.py
code/python/pre_processing/: create_transition_dataset.py  gen_dataset.py  gen_dataset_nopose.py  multi_device.py  unit_tests.py
code/python/speed_regression/: gaussian_processing.py  grid_search.py  imu_optimization.py  regression.py  regression_cascade.py  rnn.py  step_counting.py  test.py  training_data.py  validate.py
code/python/utility/: create_figure.py  manage_data.py  orientation.py  plot_sparse_grid.py  run_all_baseline.py  run_multiple_weight.py  visualize_orientation.py  visualize_trajectory.py  write_trajectory_to_ply.py
code/python/wifi_localization/: wifi_localization.py
